--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Radu Novac">
-    <title>Radu Novac</title>
+    <title>Google Maps API project</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -20,7 +20,6 @@
           <a href="index.html" class="d-flex align-items-center text-dark text-decoration-none">
               <span class="fs-4">Radu Novac</span>
           </a>
-
           <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
               <a class="me-3 py-2 text-dark text-decoration-none" href="about_me.html">About me</a>
               <a class="py-2 text-dark text-decoration-none" href="contact.html">Contact</a>
@@ -38,7 +37,7 @@
           </div>
           <div class="card-body">
           <p class="card-text">This is a funny project that makes us customize a map from Google Maps to make it look like it's from Super Mario!</p>
-          <a href="contact.html" class="btn btn-outline-dark stretched-link">Go to project</a>
+          <a href="google_maps_api_project/index.html" class="btn btn-outline-dark stretched-link">Go to project</a>
           </div>
         </div>
         <br>
@@ -49,6 +48,8 @@
           <a href="#" class="btn btn-outline-dark stretched-link">Go to project</a>
           </div>
         </div>
+        <br>
+        <br>
       </main>
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
