--- a/index.html
+++ b/index.html
@@ -25,12 +25,29 @@
               <a class="py-2 text-dark text-decoration-none" href="contact.html">Contact</a>
           </nav>
         </div>
-        <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-          <h1 class="display-4 fw-normal">My projects</h1>
-          <p class="fs-5 text-muted">Here you can find the projects that i worked on:</p>
-        </div>
       </header>
       <main>
+        <div class="container my-5 text-center">
+          <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+            <div class="px-4 py-5 my-5 text-center">
+              <h1 class="display-5 fw-bold">My projects</h1>
+              <div class="col-lg-6 mx-auto">
+                <p class="lead mb-4">Here you can find the projects that i worked on.</p>
+                <!--
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                  <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+                  <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+                </div>
+                -->
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        
+
+        <!--<div class="b-example-divider"></div>-->
+
         <div class="card">
           <div class="card-header">
             Custom map using Google Maps API's
