--- a/about_me.html
+++ b/about_me.html
@@ -43,22 +43,13 @@
                 
                 document.write(eta);
             </script> years old. I studied computer science in high school and in university and i am currently finishing my degree in computer science. </p>
-            <p class="lead mb-4">I love computer science and everything thar revolves around it, in 2023 i teached it in the locel high school and i really enjoyed the experience.</p>
+            <p class="lead mb-4">I love computer science and everything thar revolves around it, in 2023 i teached it in the local high school and i really enjoyed the experience.</p>
             <p class="lead mb-4">Currently i want do understand what i want to do in the IT world.</p>
           </div>
         </div>
       </header>
       <main>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        
       </main>
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
